pihole/01-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: pihole
  labels:
    name: pihole
