pihole/deploy-urlwatcher.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pihole
  namespace: pihole
spec:
  volumes:
  - name: pihole-logs
  containers:
  - name: mediapc-urlwatcher
    image: registry.ucdialplans.com/mediapc-urlwatcher
    imagePullPolicy: Always
    resources:
      requests:
        cpu: 100m
        memory: 5Mi
      limits:
        cpu: 100m
        memory: 5Mi
    volumeMounts:
    - name: pihole-logs
      mountPath: /var/log/pihole
