pihole/pihole-sync-deploy.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pihole-sync
  namespace: pihole
  annotations:
    keel.sh/policy: force
    keel.sh/match-tag: "true"
    keel.sh/trigger: poll
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: pihole-sync
  template:
    metadata:
      labels:
        app: pihole-sync
        name: pihole-sync
    spec:
      dnsPolicy: ClusterFirstWithHostNet
      restartPolicy: Always
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-type
                operator: In
                values:
                - worker
      containers:
      - name: pihole-sync
        image: mattwebbio/orbital-sync:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 500Mi
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      automountServiceAccountToken: false
