pihole/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pihole
  name: pihole-web
  namespace: pihole
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: pihole
 

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pihole
  name: pihole-dns
  namespace: pihole
spec:
  externalTrafficPolicy: Local
  loadBalancerIP: 192.168.1.16
  ports:
  - name: dns
    nodePort: 30325
    port: 53
    protocol: TCP
    targetPort: dns
  - name: dns-udp
    nodePort: 30325
    port: 53
    protocol: UDP
    targetPort: dns-udp
  selector:
    app: pihole
    release: pihole
  sessionAffinity: None
  type: LoadBalancer
